--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_recycler_view1">RecyclerViewActivity1</string>
+    <string name="drawer_open">open</string>
+    <string name="drawer_close">close</string>
 </resources>
